====================================

Bugs fixed in 3.06
==================
[1606265] No longer terminates after edit when username and/or
hostname is not an XML-compliant name.
[1609759] "Show Password in display list & tree" setting now
persistent across application exit.
[1608191] Tree view's state is now preserved across timed lock and
when starting with '-s' flag.

New Features for 3.05
=====================
[1452303] Support multiple automatic backups
[1504327, 1600626] Portable (e.g., USB stick) installation supported
(configuration information stored in .cfg file instead of registry).
[1452303, 1303548, 912724] Option to start Password Safe minimized at login
[1600626] Ability to specify alternate browser for URLs - useful if
Firefox is your default browser, but you need to access a site that
only works with IE, for example.

Changes to Existing Features in 3.05
====================================
[838450] The undocumented backup to .psafe3~ has been replaced by the
multiple automatic backup mechanism.

Bugs fixed in 3.05
==================
[1606026*] Missing manifest files added, application no longer requires
vcredist_x86.exe
[1606237*, 1606232*] View preferences now work correctly
[1605389*] Read-only flag now updated correctly
[1578171] Hotkey works again if window just obscured
[1521684,1504527] Old (V1) databases now read correctly - thanks to
Karel Van der Gucht.

New Features for 3.04
=====================
None

Changes to Existing Features in 3.04
====================================
None

Bugs fixed in 3.04
==================
[1575432] Hidden notes no longer lost after edit
[1575279] Database now marked as "changed" after performing PWHistory operations
[1575415] Weak master password allowed on password change as well as
new safe.

New Features for 3.03
=====================
[1302047] Enable Maximize/Window button
[1511833] Better formatting of plain text export files. Only the order of