@@ -49,6 +49,19 @@ CEditDlg::CEditDlg(CItemData *ci, CWnd* pParent)
 {
   ASSERT(ci != NULL);
 
+  if (HIDDEN_NOTES.IsEmpty()) {
+    HIDDEN_NOTES.LoadString(IDS_HIDDENNOTES);
+    CS_ON.LoadString(IDS_ON);
+    CS_OFF.LoadString(IDS_OFF);
+#if defined(POCKET_PC)
+	CS_SHOW.LoadString(IDS_SHOWPASSWORDTXT1);
+	CS_HIDE.LoadString(IDS_HIDEPASSWORDTXT1);
+#else
+	CS_SHOW.LoadString(IDS_SHOWPASSWORDTXT2);
+	CS_HIDE.LoadString(IDS_HIDEPASSWORDTXT2);
+#endif
+  }
+
   BOOL HasHistory = FALSE;
   ci->CreatePWHistoryList(HasHistory, m_MaxPWHistory,
                           m_NumPWHistory, 
@@ -74,19 +87,6 @@ CEditDlg::CEditDlg(CItemData *ci, CWnd* pParent)
   if (m_ascLTime.IsEmpty())
     m_ascLTime.LoadString(IDS_NEVER);
   m_oldascLTime = m_ascLTime;
-
-  if (HIDDEN_NOTES.IsEmpty()) {
-    HIDDEN_NOTES.LoadString(IDS_HIDDENNOTES);
-    CS_ON.LoadString(IDS_ON);
-    CS_OFF.LoadString(IDS_OFF);
-#if defined(POCKET_PC)
-	CS_SHOW.LoadString(IDS_SHOWPASSWORDTXT1);
-	CS_HIDE.LoadString(IDS_HIDEPASSWORDTXT1);
-#else
-	CS_SHOW.LoadString(IDS_SHOWPASSWORDTXT2);
-	CS_HIDE.LoadString(IDS_HIDEPASSWORDTXT2);
-#endif
-  }
 }
 
 CEditDlg::~CEditDlg()
